--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "primeflex": "^3.3.1",
     "primeng": "^18.0.0",
     "rxjs": "~7.8.0",
+    "tailwindcss-primeui": "^0.3.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
