--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@primeng/themes": "^18.0.0",
+    "hammerjs": "^2.0.8",
     "primeflex": "^3.3.1",
     "primeng": "^18.0.0",
     "rxjs": "~7.8.0",
@@ -35,6 +36,7 @@
     "@angular-devkit/build-angular": "^18.2.12",
     "@angular/cli": "^18.2.12",
     "@angular/compiler-cli": "^18.2.0",
+    "@types/hammerjs": "^2.0.46",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
